# prompt-compiler

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md  config.toml  gitbook-serve.sh  gitpush.sh  improved_demo.rs
.github/workflows/: gitbook.yml
benches/: .gitkeep  README.md  compression_performance.rs  storage_performance.rs  weight_dynamics.rs
crates/prompt-analyzer/: Cargo.toml
crates/prompt-analyzer/src/: analyzer.rs  benchmark.rs  encoder.rs  enhanced.rs  lib.rs  sequential.rs  storage.rs  test_data.rs  visualizer.rs
crates/prompt-compiler-cli/: Cargo.toml
crates/prompt-compiler-cli/src/: cli.rs  lib.rs  main.rs
crates/prompt-compiler-core/: Cargo.toml
crates/prompt-compiler-core/src/: error.rs  ir.rs  lib.rs
crates/prompt-compiler-core/src/compiler/: mod.rs
crates/prompt-compiler-core/src/compiler/analyzers/: mod.rs
crates/prompt-compiler-core/src/compiler/generators/: mod.rs
crates/prompt-compiler-core/src/compiler/optimizers/: mod.rs
crates/prompt-compiler-crypto/: Cargo.toml
crates/prompt-compiler-crypto/src/: lib.rs
crates/prompt-compiler-embeddings/: Cargo.toml
crates/prompt-compiler-embeddings/src/: lib.rs
crates/prompt-compiler-node/: Cargo.toml
crates/prompt-compiler-node/src/: api_server.rs  cache.rs  context_engine.rs  lib.rs  llm_client.rs  main.rs  storage.rs
crates/prompt-compiler-sdk/: Cargo.toml
crates/prompt-compiler-sdk/src/: lib.rs
crates/prompt-compiler-storage/: Cargo.toml
crates/prompt-compiler-storage/src/: dag.rs  lib.rs  state_db.rs  vector_index.rs
crates/prompt-compiler-web/: Cargo.toml
crates/prompt-compiler-web/src/: lib.rs  main.rs
crates/prompt-compiler-weights/: Cargo.toml
crates/prompt-compiler-weights/benches/: weight_dynamics.rs
crates/prompt-compiler-weights/src/: lib.rs
demo_semantic_db/: IDENTITY  LOG  MANIFEST-000005
demo_semantic_db_v2/: 000018.sst  000019.sst  000024.sst  000025.sst  IDENTITY  LOG  LOG.old.1754385495134566  LOG.old.1754385641469365  MANIFEST-000027  OPTIONS-000023
docs/: .gitkeep  GITBOOK_SETUP.md  README.md  SUMMARY.md  architecture_design.md  book.json  configuration.md  pc_llm_boundary_design.md  pc_llm_boundary_design.zh.md  pc_node_performance_report.md  pc_node_performance_report.zh.md
docs/use_cases/: multi_agent_sharing.cn.md  multi_agent_sharing.md  real_world_integration_guide.cn.md  real_world_integration_guide.md
examples/: .gitkeep  Cargo.toml  README.md  agent_memory_demo.rs  basic_demo.rs  cache_demo  cache_demo.rs  complete_rocksdb_demo  complete_rocksdb_demo.rs  complete_rocksdb_demo_fixed  context_infrastructure_architecture.rs  context_sharing_benchmark  context_sharing_benchmark.rs  context_transfer_methods_demo.rs  customer_continuity_demo  customer_continuity_demo.rs  demo_Cargo.toml  demo_config.toml  high_performance_rocksdb_system  high_performance_rocksdb_system.rs  industry_demo  industry_embedding_demo.rs  integrated_semantic_system  integrated_semantic_system.rs  model_comparison_demo  model_comparison_demo.rs  multi_agent_sharing_demo  multi_agent_sharing_demo.rs  openai_demo  openai_env_demo  openai_env_demo.rs  openapi_semantic_server  openapi_semantic_server.rs  openapi_server  paper_compliance_verification.rs  pc_llm_boundary_demo  pc_llm_boundary_demo.rs  persistent_semantic_system.rs  real_embedding_demo.rs  rocksdb_semantic_system.rs  (+11 more)
examples/industry_demo_runner/: Cargo.toml
examples/industry_demo_runner/src/: main.rs
examples/openai_demo_runner/: Cargo.toml
examples/openai_demo_runner/src/: main.rs
examples/semantic_demo/: Cargo.toml
scripts/: README.md  generate_performance_report.py  multi_agent_test_results_20250806_233439.json  multi_agent_test_results_20250809_071317.json  test_config.py  test_data_analyzer.py  test_multi_agent.py  test_pc_complete.sh  test_pc_node.py  test_runner.py  test_single_agent.py  test_suite_README.md
scripts/configs/: multi_agent_config.json  single_agent_config.json
scripts/test_results/: analysis_report_20250806_222145.md  analysis_report_20250807_010509.md  analysis_report_20250807_011021.md  analysis_report_20250807_011601.md  analysis_report_20250807_013052.md  analysis_report_20250807_140501.md  analysis_report_20250807_141137.md  analysis_report_20250807_161637.md  analysis_report_20250809_072015.md  complete_test_results_20250806_222145.json  complete_test_results_20250807_002734.json  complete_test_results_20250807_004741.json  complete_test_results_20250807_005432.json  complete_test_results_20250807_005802.json  complete_test_results_20250807_010105.json  complete_test_results_20250807_010509.json  complete_test_results_20250807_011021.json  complete_test_results_20250807_011224.json  complete_test_results_20250807_011601.json  complete_test_results_20250807_012148.json  complete_test_results_20250807_013008.json  complete_test_results_20250807_013052.json  complete_test_results_20250807_013151.json  complete_test_results_20250807_013239.json  complete_test_results_20250807_140501.json  complete_test_results_20250807_141137.json  complete_test_results_20250807_161637.json  complete_test_results_20250809_072015.json  multi_agent_20250806_222145.json  multi_agent_20250807_002734.json  multi_agent_20250807_004741.json  multi_agent_20250807_005432.json  multi_agent_20250807_005802.json  multi_agent_20250807_010105.json  multi_agent_20250807_010509.json  multi_agent_20250807_011021.json  multi_agent_20250807_011224.json  multi_agent_20250807_011601.json  multi_agent_20250807_012148.json  multi_agent_20250807_013008.json  (+27 more)
scripts/utils/: __init__.py  chart_generator.py  pc_client.py  performance_metrics.py
test_results/: analysis_report_20250807_001849.md  analysis_report_20250807_002709.md  clean_analysis_report.md  complete_test_results_20250807_001849.json  complete_test_results_20250807_002709.json  corrected_analysis_report.md  multi_agent_20250807_001849.json  multi_agent_20250807_002709.json  single_agent_20250807_001849.json  single_agent_20250807_002709.json
tests/: .gitkeep
