[workspace]
members = [
    "crates/prompt-compiler-core",
    "crates/prompt-compiler-cli",
    "crates/prompt-compiler-storage",
    "crates/prompt-compiler-crypto",
    "crates/prompt-compiler-weights",
    "crates/prompt-compiler-web",
    "crates/prompt-compiler-sdk",
    "crates/prompt-analyzer",
    "crates/prompt-compiler-embeddings",
    "crates/prompt-compiler-node"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["neeboo <ghostcorn@gmail.com>"]
license = "MIT"
repository = "https://github.com/neeboo/prompt-compiler"
homepage = "https://github.com/neeboo/prompt-compiler"
documentation = "https://docs.rs/prompt-compiler"
keywords = ["ai", "prompt", "compiler", "optimization", "transformer"]
categories = ["command-line-utilities", "science", "text-processing"]

[workspace.dependencies]
# Core numerical computing
nalgebra = { version = "0.32", features = ["serde-serialize"] }
ndarray = "0.15"

# High-performance storage
rocksdb = "0.21"

# Cryptographic functionality
ed25519-dalek = "2.0"
sha2 = "0.10"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI and user interface
clap = { version = "4.0", features = ["derive", "color"] }
colored = "2.0"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# OpenAPI support
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Additional dependencies for RocksDB system
uuid = { version = "1.0", features = ["v4"] }
md5 = "0.7"
bincode = "1.3"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"

# Embedding and ML
prompt-compiler-embeddings = { path = "crates/prompt-compiler-embeddings" }
prompt-compiler-crypto = { path = "crates/prompt-compiler-crypto" }
prompt-compiler-storage = { path = "crates/prompt-compiler-storage" }
prompt-compiler-core = { path = "crates/prompt-compiler-core" }
prompt-compiler-weights = { path = "crates/prompt-compiler-weights" }
prompt-compiler-sdk = { path = "crates/prompt-compiler-sdk" }
prompt-compiler-cli = { path = "crates/prompt-compiler-cli" }
prompt-analyzer = { path = "crates/prompt-analyzer" }
prompt-compiler-web = { path = "crates/prompt-compiler-web" }
prompt-compiler-node = { path = "crates/prompt-compiler-node" }
