[package]
name = "prompt-compiler-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Command-line interface for the prompt compiler"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "pc"
path = "src/main.rs"

[dependencies]
clap.workspace = true
colored.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true

prompt-compiler-core.workspace = true
prompt-compiler-storage.workspace = true
prompt-compiler-weights.workspace = true

[dev-dependencies]
tempfile.workspace = true
