[package]
name = "prompt-compiler-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Cryptographic utilities for data integrity and verification"
keywords.workspace = true
categories.workspace = true

[dependencies]
ed25519-dalek.workspace = true
sha2.workspace = true
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
hex = "0.4"
rand = "0.8"

[dev-dependencies]
tempfile.workspace = true
