[package]
name = "prompt-compiler-embeddings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Real embedding models integration using industry-standard libraries"
keywords.workspace = true
categories.workspace = true

[dependencies]
# 基础依赖
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

# HTTP客户端（用于OpenAI API等）
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

# 缓存和序列化
lru = "0.12"
bincode = "1.3"

# 轻量级ML库（避免PyTorch冲突）
# rust-bert = { version = "0.23.0", optional = true }
# tch = { version = "0.16", optional = true }

[features]
default = ["mock-backend"]
openai-api = ["reqwest", "tokio"]
mock-backend = []
# rust-bert-backend = ["rust-bert", "tch", "tokio"]
