[package]
name = "prompt-compiler-node"
version = "0.1.0"
edition = "2021"
description = "Prompt Compiler Node - Complete runtime with OpenAI-compatible API"

[dependencies]
# Web server
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Text processing
regex = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = "0.3"

# Environment variables
dotenvy = "0.15"

# Caching
moka = { version = "0.12", features = ["future"] }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Math
nalgebra = "0.32"

# Local dependencies
prompt-compiler-core = { path = "../prompt-compiler-core" }
prompt-compiler-weights = { path = "../prompt-compiler-weights" }
prompt-compiler-embeddings = { path = "../prompt-compiler-embeddings" }
prompt-compiler-storage = { path = "../prompt-compiler-storage" }

[dev-dependencies]
tower-test = "0.4"
