[package]
name = "prompt-compiler-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "High-performance storage layer with RocksDB and DAG management"
keywords.workspace = true
categories.workspace = true

[dependencies]
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true

prompt-compiler-crypto.workspace = true

[dev-dependencies]
tempfile.workspace = true
