[package]
name = "prompt-compiler-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Web interface and API server for prompt compiler"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "pc-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

prompt-compiler-core.workspace = true
prompt-compiler-storage.workspace = true
prompt-compiler-sdk.workspace = true

[dev-dependencies]
tempfile.workspace = true
