[package]
name = "industry_demo_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocksdb = "0.22"
tch = { version = "0.15", optional = true }
candle-core = { version = "0.5", optional = true }
rust-bert = { version = "0.22", optional = true }

[features]
default = []
bert = ["rust-bert", "tch"]
candle = ["candle-core"]
